# Janus-EG

./: .gitignore  README.md  generation_inference.py  install.md  pyproject.toml  requirements.txt
demo/: app.py  app_janusflow.py  app_januspro.py  app_januspro_mps.py  fastapi_app.py
demo/webui/: APIChat.js  index.css  index.html  start_docker_environment.sh
janus/janusflow/models/: processing_vlm.py
janus/models/: clip_encoder.py  modeling_vlm.py  processing_vlm.py  vq_model.py
janus/utils/: cuda_memory_manager.py
