[project]
name = "janus"
version = "1.0.0"
description = "Janus - Unified Multimodal Understanding and Generation Models"
authors = [{name = "DeepSeek-AI"}]
license = {file = "LICENSE-CODE"}
urls = {homepage = "https://github.com/deepseek-ai/Janus"}
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "torch>=2.0.1,<3.0.0",
    "transformers>=4.38.2,<5.0.0",
    "timm>=0.9.16,<1.0.0",
    "accelerate>=0.28.0",
    "sentencepiece>=0.2.0",
    "attrdict>=2.0.1",
    "einops>=0.8.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
gradio = [
    "gradio==3.48.0",
    "gradio-client==0.6.1",
    "mdtex2html==1.3.0",
    "pypinyin==0.50.0",
    "tiktoken==0.5.2",
    "tqdm==4.64.0",
    "colorama==0.4.5",
    "Pygments==2.12.0",
    "markdown==3.4.1",
	"sentencepiece>=0.2.0",
]
lint = [
    "isort",
    "black[jupyter] >= 22.6.0",
    "pylint[spelling] >= 2.15.0",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-docstrings",
    "flake8-pyi",
    "flake8-simplify",
    "ruff",
    "pyenchant",
    "pre-commit",
]
windows = [
    "pywin32>=306",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.0.0",
]

[tool.setuptools]
packages = {find = {exclude = ["images", "tests"]}}